- https://github.com/eclipse-syson/syson/issues/505[#505] [diagrams] Add value expression in Node label
- https://github.com/eclipse-syson/syson/issues/507[#507] [general-view] Add missing tools to create Items and Parts in Port and PortDefinition

=== Improvements

- https://github.com/eclipse-syson/syson/issues/298[#298] [syson] Add root Namespace to SysON models and libraries
- https://github.com/eclipse-syson/syson/issues/324[#324] [diagrams] Improve support for whitespace, quotes, and special characters in direct edit
- https://github.com/eclipse-syson/syson/issues/307[#307] [diagrams] Fix parallel states tooling conditions
- https://github.com/eclipse-syson/syson/issues/269[#269] [diagrams] Handle start and done actions in Action Flow View & General View diagrams
- https://github.com/eclipse-syson/syson/issues/344[#344] [metamodel] Improve implementation of getName and getShortName
- https://github.com/eclipse-syson/syson/issues/333[#333] [state-transition-view] Improve actions compartment for states
- https://github.com/eclipse-syson/syson/issues/334[#334] [diagrams] Add State Transition View concepts in the General View diagram
- https://github.com/eclipse-syson/syson/issues/388[#388] [details] Add Transition source and target to Core properties in the Details view
- https://github.com/eclipse-syson/syson/issues/394[#394] [metamodel] All _redefines_ references have been implemented.
- https://github.com/eclipse-syson/syson/issues/416[#416] [import] Improve textual import running process.
By default, end users don't have to copy _syside-cli.js_ near the _syson-application_ jar anymore.
The embedded _syside-cli.js_ is copied in a system temp folder and executed from there (with node).
But, if you encounter execution rights problem, you can still copy _syside-cli.js_ in a place where you have the appropriate rights and use the _org.eclipse.syson.syside.path_ application option.